<resources>
    <string name="app_name">Use\'Fuel </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_user">User</string>
    <string name="menu_map">Map</string>
    <string name="menu_car">Manage Cars</string>
    <string name="menu_fuel">Order Fuel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_orders">Orders</string>

    <string name="login_email">Enter your email</string>
    <string name="login_pwd">Enter your password</string>
    <string name="login_login">SIGN IN</string>
    <string name="login_register">You don\'t have an account? Click here !</string>

    <string name="register_username">Enter your username</string>
    <string name="register_email">Enter your email</string>
    <string name="register_pwd">Enter your password</string>
    <string name="register_pwd2">Enter it again</string>
    <string name="register_register">CREATE ACCOUNT</string>
    <string name="register_login">Already registered? Sign in here!</string>

    <string name="validate">Validate</string>
    <string name="brand">Add brand</string>
    <string name="color">Add color</string>
    <string name="plate">Add last 3 digits of your plate</string>
    <string name="fuel">Add type of fuel</string>

    <string name="none">None</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm delivery</string>
    <string name="options">Options</string>
    <string name="refresh">Refresh</string>

    <string name="fuel_choose_car">Choose car :</string>
    <string name="fuel_choose_quantity">Desired quantity :</string>
    <string name="fuel_estimated_price">Estimated price :</string>

    <string name="button_book_quantity">Find your address</string>
    <string name="button_book_address">Book fuel</string>

    <string name="wbad1_title">Be your own boss</string>
    <string name="wbad1_content">Do you want to be a delivery man?\nWith Use\'Fuel it\'s very easy and you\ncan start earn money directly</string>
    <string name="wbad2_title">Work whenever you want</string>
    <string name="wbad2_content">Want to manage your schedule?\nWith Use\'Fuel now you can!\nYou are free</string>
    <string name="wbad3_title">Use\'Fuel Team help you</string>
    <string name="wbad3_content">We follow you if you have any problems.\n We can give you advices\nto optimize your time of work</string>
    <string name="wbad4_title">apply@usefuel.com</string>
    <string name="wbad4_content">Send us an email to\napply as a delivery person.\nJoin the Use\'fuel team</string>

    <string name="wait_deliverer">Please wait,\nwe are finding a deliverer \nfor your fuel</string>
    <string name="no_deliverer">No deliverer responded yet.\nWait a few second to resume search\nOr press Cancel</string>
    <string name="really_no_deliverer">Our deliverer are really busy.\nTry again later !</string>

    <string name="booked_cancel">Are you sure you want to cancel the current delivery</string>
    <string name="booked_map">Google Map</string>
    <string name="booked_confirm">Have you delivered the fuel ?</string>

    <string name="button_booked_cancel">Cancel</string>
    <string name="button_booked_map">GPS</string>
    <string name="button_booked_confirm">Delivered</string>


    <string-array name="car_brand">
        <item>Other</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>BMW</item>
        <item>Seat</item>
        <item>Renault</item>
        <item>Peugeot</item>
        <item>Audi</item>
        <item>Citroën</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Lexus</item>
        <item>Nissan</item>
        <item>Volvo</item>
    </string-array>

    <string-array name="car_color">
        <item>Other</item>
        <item>Black</item>
        <item>White</item>
        <item>Silver</item>
        <item>Grey</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gold</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Green</item>
    </string-array>

    <string-array name="deliver_distance">
        <item>5km</item>
        <item>10km</item>
        <item>20km</item>
        <item>30km</item>
    </string-array>

    <string-array name="deliver_quantity">
        <item>5L and more</item>
        <item>20L and more</item>
        <item>50L and more</item>
    </string-array>



    <string-array name="car_fuel">
        <item>SP95</item>
        <item>E85</item>
        <item>Diesel</item>
        <item>Ethanol</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
