<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_user" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/menu_car" />
        <item
            android:id="@+id/nav_fuel"
            android:icon="@drawable/ic_menu_fuel"
            android:title="@string/menu_fuel" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>


</menu>
