<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_weight="0.15"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_launcher_circle" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        fontPath="fonts/Pacifico.ttf"
        android:layout_weight="0.23"
        android:gravity="center"
        android:textColor="@color/colorLight"
        android:text="@string/app_name"
        android:textSize="60sp" />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        fontPath="fonts/Quicksand_Book.otf"
        android:layout_weight="0.4"
        android:gravity="center"
        android:textColor="@color/colorLight"
        android:text="@string/wait_deliverer"
        android:textSize="20sp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="onCancel"
        android:text="@string/cancel"
        android:visibility="invisible" />


</LinearLayout>