<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0.05"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_launcher_circle" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        fontPath="fonts/Pacifico.ttf"
        android:layout_weight="0.23"
        android:gravity="center"
        android:textColor="@color/colorLight"
        android:text="@string/app_name"
        android:textSize="60sp" />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        fontPath="fonts/Quicksand_Book.otf"
        android:layout_weight="0.4"
        android:gravity="center"
        android:textColor="@color/colorLight"
        android:text="@string/wait_deliverer"
        android:textSize="20sp"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/layout_book"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="16">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@color/transparent" />

        <Button
            android:id="@+id/button_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:onClick="onCancel"
            android:text="@string/cancel" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@color/transparent" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:onClick="onMap"
            android:text="@string/button_book_address" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@color/transparent" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:onClick="onConfirm"
            android:text="@string/button_book_address" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@color/transparent" />

    </LinearLayout>


</LinearLayout>