<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"

    tools:context="fr.esiea.ferre.usefuel.LoginActivity">

    <TextView
        android:id="@+id/toolbar_title"
        fontPath="fonts/Pacifico.ttf"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawableTint="@android:color/white"
            android:drawablePadding="10dp"
            fontPath="fonts/Quicksand_Book.otf"
            android:theme="@style/EditTextThemeLogin"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorLight"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableTint="@android:color/white"
            android:drawablePadding="10dp"
            android:layout_margin="15dp"
            android:padding="10dp"
            fontPath="fonts/Quicksand_Book.otf"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorLight"
            android:theme="@style/EditTextThemeLogin"
            android:hint="@string/login_pwd"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSingIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="0.50"
            android:background="@drawable/ripple"
            android:textSize="20sp"
            fontPath="fonts/Quicksand_Book.otf"
            android:text="@string/login_login"
            android:textStyle="bold"/>

        <!--<TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            fontPath="fonts/Quicksand_Book.otf"
            android:textColor="@color/colorLight"
            android:text="@string/login_register"
            android:textAlignment="center" /> -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:textColor="@android:color/white"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textViewSignIn"
            android:textColor="@android:color/white"
            android:text=" Sign Up"/>


    </LinearLayout>

</RelativeLayout>