<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.esiea.ferre.usefuel.MainActivity"

    android:id="@+id/currentFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:layout_weight="2"
            android:tint="@color/colorPrimaryLight"
            app:srcCompat="@drawable/ic_menu_car" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="start|center_vertical"
            fontPath="fonts/Quicksand_Book.otf"
            android:text="@string/menu_car"
            android:textSize="20sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        app:srcCompat="@color/colorPrimaryLight"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <TextView
            android:id="@+id/tv_car1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|bottom"
            android:text="@string/none"
            fontPath="fonts/Quicksand_Book.otf"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_car1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/edit" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/car10layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_car10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            fontPath="fonts/Quicksand_Book.otf"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button_d_car1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/delete" />
    </LinearLayout>

    <ImageView
        android:id="@+id/blueLine1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        app:srcCompat="@color/colorPrimaryLight"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/car2layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_car2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|bottom"
            android:text="@string/none"
            fontPath="fonts/Quicksand_Book.otf"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_car2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/edit" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/car20layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_car20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            fontPath="fonts/Quicksand_Book.otf"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button_d_car2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/delete" />
    </LinearLayout>


    <ImageView
        android:id="@+id/blueLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        app:srcCompat="@color/colorPrimaryLight"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/car3layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_car3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|bottom"
            android:text="@string/none"
            fontPath="fonts/Quicksand_Book.otf"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_car3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/edit" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/car30layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_car30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            fontPath="fonts/Quicksand_Book.otf"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button_d_car3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/delete" />
    </LinearLayout>

    <ImageView
        android:id="@+id/blueLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        app:srcCompat="@color/colorPrimaryLight"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/car4layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_car4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|bottom"
            android:text="@string/none"
            fontPath="fonts/Quicksand_Book.otf"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_car4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/edit" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/car40layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_car40"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            fontPath="fonts/Quicksand_Book.otf"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button_d_car4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/delete" />
    </LinearLayout>



</android.widget.LinearLayout>
